--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
     <title>Resume - Leo Craig Online Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gassets.com" crossorigin />
+        <link rel="icon" type="image/x-icon" href="/assets/imgs/ZPtMIaL4.ico">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
