--- a/resume.html
+++ b/resume.html
@@ -176,19 +176,19 @@ modules.</p>
               </div>
             </div>
           </div>
-          <div class=".container-fluid" style="margin-top: 50px;">
+          <div class="container" style="margin-top: 50px;">
   <div class="row g-5">
-    <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/excel.webp" alt="Microsoft Excel" class="skills-photo">
-      <p class="skill-name">Excel</p>
-    </div>
     <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
       <img src="assets/imgs/python-logo.webp" alt="Python" class="skills-photo">
       <p class="skill-name">Python</p>
     </div>
-    <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/r-logo.webp" alt="R" class="skills-photo">
-      <p class="skill-name">R</p>
+        <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+      <img src="assets/imgs/react-logo.png" alt="React" class="skills-photo">
+      <p class="skill-name">React</p>
+    </div>
+        <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+      <img src="assets/imgs/redux-logo.png" alt="Redux" class="skills-photo">
+      <p class="skill-name">Redux</p>
     </div>
     <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
       <img src="assets/imgs/html5-logo.webp" alt="HTML" class="skills-photo">
@@ -203,17 +203,25 @@ modules.</p>
       <p class="skill-name">JavaScript</p>
     </div>
         <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/git-logo2.webp" alt="Git" class="skills-photo">
-      <p class="skill-name">Git</p>
-    </div>
-    <div class="col-6 col-lg-4 col-xl-4  text-center logo hidden">
-      <img src="assets/imgs/microsoft-office.webp" alt="Microsoft-Office" class="skills-photo">
-      <p class="skill-name">Microsoft Office</p>
-    </div>
-        <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
       <img src="assets/imgs/postgresql.webp" alt="PostgreSQL" class="skills-photo">
       <p class="skill-name">PostgreSQL</p>
     </div>
+        <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+      <img src="assets/imgs/r-logo.webp" alt="R" class="skills-photo">
+      <p class="skill-name">R</p>
+    </div>
+            <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+      <img src="assets/imgs/git-logo2.webp" alt="Git" class="skills-photo">
+      <p class="skill-name">Git</p>
+    </div>
+        <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+      <img src="assets/imgs/excel.webp" alt="Microsoft Excel" class="skills-photo">
+      <p class="skill-name">Excel</p>
+    </div>
+        <!-- <div class="col-6 col-lg-4 col-xl-4  text-center logo hidden">
+      <img src="assets/imgs/microsoft-office.webp" alt="Microsoft-Office" class="skills-photo">
+      <p class="skill-name">Microsoft Office</p>
+    </div> -->
 </div>
 
     </section>
