--- a/resume.html
+++ b/resume.html
@@ -7,15 +7,17 @@
     <title>Resume - Leo Craig Online Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gassets.com" crossorigin />
-        <link rel="icon" type="image/x-icon" href="/assets/imgs/ZPtMIaL4.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/imgs/ZPtMIaL4.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"/>
+      crossorigin="anonymous"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@700&family=Montserrat:wght@100;400;900&family=Roboto:wght@100;300;400;700;900&family=Ubuntu&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <style>
       header {
@@ -30,16 +32,16 @@
         <a href="./resume.html">Resume</a>
       </nav>
     </header>
-        <section class="page">
+    <section class="page">
       <div class="content">
         <div class="container">
-            <div class="row">
-<div class="col-xs-12">
-<div class="template-example">
-<h2 class="page-title">Resume</h2>
-</div>
-</div>
-</div>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="template-example">
+                <h2 class="page-title">Resume</h2>
+              </div>
+            </div>
+          </div>
           <div class="row resume-row-label">
             <div class="col-xs-12">
               <div class="template-example">
@@ -63,9 +65,14 @@
                 <h3>The University of Manchester</h3>
                 <p>Bachelors Degree in Economics | 2022</p>
                 <p>Graduated with First Class Honours</p>
-                <p>Achieved Upper First Class Honours in all Advanced Mathematics, Statistics and Econometrics
-modules.</p>
-<p>Particular focus on micro/macro-economics, finance, econometrics and data.</p>
+                <p>
+                  Achieved Upper First Class Honours in all Advanced
+                  Mathematics, Statistics and Econometrics modules.
+                </p>
+                <p>
+                  Particular focus on micro/macro-economics, finance,
+                  econometrics and data.
+                </p>
               </div>
             </div>
           </div>
@@ -83,13 +90,22 @@ modules.</p>
               <div class="template-example resume-item">
                 <h3>Harvard CS50 AI & CS50x</h3>
                 <p>CS50 AI and CS50x | 2022</p>
-                <p>See <a href="https://github.com/leocraig18" class="clickables" target="_blank">
-                GitHub</a> repository for all Data Science, Python and web development projects.</p>
-                
+                <p>
+                  See
+                  <a
+                    href="https://github.com/leocraig18"
+                    class="clickables"
+                    target="_blank"
+                  >
+                    GitHub</a
+                  >
+                  repository for all Data Science, Python and web development
+                  projects.
+                </p>
               </div>
             </div>
           </div>
-                    <div class="row resume-row">
+          <div class="row resume-row">
             <div class="col-xs-12 col-md-5 text-center" style="margin: auto">
               <div class="resume-logo hidden">
                 <img
@@ -103,7 +119,6 @@ modules.</p>
               <div class="template-example resume-item">
                 <h3>Simon Langton Grammar School For Boys</h3>
                 <p>3A's at A-level | 2019</p>
-                
               </div>
             </div>
           </div>
@@ -114,8 +129,8 @@ modules.</p>
               </div>
             </div>
           </div>
-                    <div class="row resume-row">
-            <div class="col-xs-12 col-md-5 text-center" style="margin:auto;">
+          <div class="row resume-row">
+            <div class="col-xs-12 col-md-5 text-center" style="margin: auto">
               <div class="resume-logo hidden">
                 <img
                   src="assets/imgs/ey.png"
@@ -127,26 +142,56 @@ modules.</p>
             <div class="col-xs-12 col-md-7">
               <div class="template-example resume-item">
                 <h3>Associate Forensic Data Scientist</h3>
-                <p>EY Financial Services | Incoming </p>
-                <p>Employing machine learning methods including deep neural networks and NLP to solve client issues.</p>
-                <p>Designing and developing scalable solutions using cutting edge tech stacks and platforms.</p>
-                <p>Conveying insights to stakeholders using a variety of visualisation and reporting strategies.</p>
+                <p>EY Financial Services | Incoming</p>
+                <p>
+                  Employing machine learning methods including deep neural
+                  networks and NLP to solve client issues.
+                </p>
+                <p>
+                  Designing and developing scalable solutions using cutting edge
+                  tech stacks and platforms.
+                </p>
+                <p>
+                  Conveying insights to stakeholders using a variety of
+                  visualisation and reporting strategies.
+                </p>
               </div>
             </div>
           </div>
           <div class="row resume-row">
             <div class="col-xs-12 col-md-5 text-center">
               <div class="resume-logo hidden">
-                <canvas id="canvasdonut" width="300" height="240" style="margin:auto;">
-</canvas>
+                <canvas
+                  id="canvasdonut"
+                  width="300"
+                  height="240"
+                  style="margin: auto"
+                >
+                </canvas>
               </div>
             </div>
             <div class="col-xs-12 col-md-7">
               <div class="template-example resume-item">
                 <h3>Freelance Software Developer</h3>
-                <p>Working with clients to deliver full stack web development projects.</p>
-                <p>Highly proficient with Python for multi-purpose application including data science and web development. </p>
-                <p>See <a href="https://github.com/leocraig18" class="clickables" target="_blank">GitHub</a> repository for all Data Science, Python and web development projects.</p>
+                <p>
+                  Working with clients to deliver full stack web development
+                  projects.
+                </p>
+                <p>
+                  Highly proficient with Python for multi-purpose application
+                  including data science and web development.
+                </p>
+                <p>
+                  See
+                  <a
+                    href="https://github.com/leocraig18"
+                    class="clickables"
+                    target="_blank"
+                    >GitHub</a
+                  >
+                  repository for all Data Science, Python and web development
+                  projects.
+                </p>
               </div>
             </div>
           </div>
@@ -164,66 +209,111 @@ modules.</p>
               <div class="template-example resume-item">
                 <h3>CAT Modeling and Exposure Management Intern</h3>
                 <p>Castel Underwriting Agencies | 2022</p>
-                <p>Worked with Sequel Impact aggregate software and exposure management tools to model, deliver and present risk outputs.</p>
+                <p>
+                  Worked with Sequel Impact aggregate software and exposure
+                  management tools to model, deliver and present risk outputs.
+                </p>
                 <p>Utilised Advanced Microsoft Excel Functions.</p>
               </div>
             </div>
           </div>
-                    <div class="row resume-row-label">
+          <div class="row resume-row-label">
             <div class="col-xs-12">
               <div class="template-example">
                 <h2 class="template-title-example">Skills</h2>
               </div>
             </div>
           </div>
-          <div class="container" style="margin-top: 50px;">
-  <div class="row g-5">
-    <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/python-logo.webp" alt="Python" class="skills-photo">
-      <p class="skill-name">Python</p>
-    </div>
-        <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/react-logo.png" alt="React" class="skills-photo">
-      <p class="skill-name">React</p>
-    </div>
-        <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/redux-logo.png" alt="Redux" class="skills-photo">
-      <p class="skill-name">Redux</p>
-    </div>
-    <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/html5-logo.webp" alt="HTML" class="skills-photo">
-      <p class="skill-name">HTML</p>
-    </div>
-    <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/css3-logo.webp" alt="CSS3" class="skills-photo">
-      <p class="skill-name">CSS3</p>
-    </div>
-    <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/javascript-logo.webp" alt="Javascript" class="skills-photo">
-      <p class="skill-name">JavaScript</p>
-    </div>
-        <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/postgresql.webp" alt="PostgreSQL" class="skills-photo">
-      <p class="skill-name">PostgreSQL</p>
-    </div>
-        <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/r-logo.webp" alt="R" class="skills-photo">
-      <p class="skill-name">R</p>
-    </div>
-            <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/git-logo2.webp" alt="Git" class="skills-photo">
-      <p class="skill-name">Git</p>
-    </div>
-        <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-      <img src="assets/imgs/excel.webp" alt="Microsoft Excel" class="skills-photo">
-      <p class="skill-name">Excel</p>
-    </div>
-        <!-- <div class="col-6 col-lg-4 col-xl-4  text-center logo hidden">
+          <div class="container" style="margin-top: 50px">
+            <div class="row g-5">
+              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+                <img
+                  src="assets/imgs/python-logo.webp"
+                  alt="Python"
+                  class="skills-photo"
+                />
+                <p class="skill-name">Python</p>
+              </div>
+              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+                <img
+                  src="assets/imgs/react-logo.png"
+                  alt="React"
+                  class="skills-photo"
+                />
+                <p class="skill-name">React</p>
+              </div>
+              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+                <img
+                  src="assets/imgs/redux-logo.png"
+                  alt="Redux"
+                  class="skills-photo"
+                />
+                <p class="skill-name">Redux</p>
+              </div>
+              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+                <img
+                  src="assets/imgs/html5-logo.webp"
+                  alt="HTML"
+                  class="skills-photo"
+                />
+                <p class="skill-name">HTML</p>
+              </div>
+              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+                <img
+                  src="assets/imgs/css3-logo.webp"
+                  alt="CSS3"
+                  class="skills-photo"
+                />
+                <p class="skill-name">CSS3</p>
+              </div>
+              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+                <img
+                  src="assets/imgs/javascript-logo.webp"
+                  alt="Javascript"
+                  class="skills-photo"
+                />
+                <p class="skill-name">JavaScript</p>
+              </div>
+              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+                <img
+                  src="assets/imgs/postgresql.webp"
+                  alt="PostgreSQL"
+                  class="skills-photo"
+                />
+                <p class="skill-name">PostgreSQL</p>
+              </div>
+              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+                <img
+                  src="assets/imgs/r-logo.webp"
+                  alt="R"
+                  class="skills-photo"
+                />
+                <p class="skill-name">R</p>
+              </div>
+              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+                <img
+                  src="assets/imgs/git-logo2.webp"
+                  alt="Git"
+                  class="skills-photo"
+                />
+                <p class="skill-name">Git</p>
+              </div>
+              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
+                <img
+                  src="assets/imgs/excel.webp"
+                  alt="Microsoft Excel"
+                  class="skills-photo"
+                />
+                <p class="skill-name">Excel</p>
+              </div>
+              <!-- <div class="col-6 col-lg-4 col-xl-4  text-center logo hidden">
       <img src="assets/imgs/microsoft-office.webp" alt="Microsoft-Office" class="skills-photo">
       <p class="skill-name">Microsoft Office</p>
     </div> -->
-</div>
-
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <footer>
       <div class="container text-center">
