--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
               about finance, software development and machine learning, and
               equipped with a strong economics, econometrics, finance and
               mathematics background coupled with programming proficiencies.
-              Check out my <a href="/resume.html">resume</a>,
-              <a href="https://github.com/leocraig18" target="_blank">GitHub</a>
+              Check out my <a class='about-link' href="/resume.html">resume</a>,
+              <a class='about-link' href="https://github.com/leocraig18" target="_blank">GitHub</a>
               or you can
-              <a href="mailto:leocraigbusiness@gmail.com" target="_blank"
+              <a class='about-link' href="mailto:leocraigbusiness@gmail.com" target="_blank"
                 >contact</a
               >
               me for more information.
