--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/card.css" />
     <style>
       header {
         background-color: #000000;
@@ -226,90 +227,159 @@
           </div>
           <div class="container" style="margin-top: 50px">
             <div class="row g-5">
-              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-                <img
-                  src="assets/imgs/python-logo.webp"
-                  alt="Python"
-                  class="skills-photo"
-                />
-                <p class="skill-name">Python</p>
+              <div
+                class="col-12 col-md-6 col-lg-4 col-xl-4 logo-container hidden"
+              >
+                <div class="screen python">
+                  <div class="screen-image"></div>
+                  <div class="screen-overlay python"></div>
+                  <div class="screen-content">
+                    <img src="assets/imgs/python-logo.webp" alt="Python Logo" />
+                    <div class="screen-user">
+                      <span class="name" data-value="PYTHON">PYTHON</span>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-                <img
-                  src="assets/imgs/react-logo.png"
-                  alt="React"
-                  class="skills-photo"
-                />
-                <p class="skill-name">React</p>
+              <div
+                class="col-12 col-md-6 col-lg-4 col-xl-4 logo-container hidden"
+              >
+                <div class="screen react">
+                  <div class="screen-image"></div>
+                  <div class="screen-overlay react"></div>
+                  <div class="screen-content">
+                    <img src="assets/imgs/react-logo.png" alt="React Logo" />
+                    <div class="screen-user">
+                      <span class="name" data-value="REACT">REACT</span>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-                <img
-                  src="assets/imgs/redux-logo.png"
-                  alt="Redux"
-                  class="skills-photo"
-                />
-                <p class="skill-name">Redux</p>
+              <div
+                class="col-12 col-md-6 col-lg-4 col-xl-4 logo-container hidden"
+              >
+                <div class="screen redux">
+                  <div class="screen-image"></div>
+                  <div class="screen-overlay redux"></div>
+                  <div class="screen-content">
+                    <img src="assets/imgs/redux-logo.png" alt="Redux Logo" />
+                    <div class="screen-user">
+                      <span class="name" data-value="REDUX">REDUX</span>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-                <img
-                  src="assets/imgs/html5-logo.webp"
-                  alt="HTML"
-                  class="skills-photo"
-                />
-                <p class="skill-name">HTML</p>
+              <div
+                class="col-12 col-md-6 col-lg-4 col-xl-4 logo-container hidden"
+              >
+                <div class="screen html5">
+                  <div class="screen-image"></div>
+                  <div class="screen-overlay html5"></div>
+                  <div class="screen-content">
+                    <img src="assets/imgs/html5-logo.webp" alt="HTML Logo" />
+                    <div class="screen-user">
+                      <span class="name" data-value="HTML5">HTML5</span>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-                <img
-                  src="assets/imgs/css3-logo.webp"
-                  alt="CSS3"
-                  class="skills-photo"
-                />
-                <p class="skill-name">CSS3</p>
+              <div
+                class="col-12 col-md-6 col-lg-4 col-xl-4 logo-container hidden"
+              >
+                <div class="screen css3">
+                  <div class="screen-image"></div>
+                  <div class="screen-overlay css3"></div>
+                  <div class="screen-content">
+                    <img src="assets/imgs/css3-logo.webp" alt="CSS3 Logo" />
+                    <div class="screen-user">
+                      <span class="name" data-value="CSS3">CSS3</span>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-                <img
-                  src="assets/imgs/javascript-logo.webp"
-                  alt="Javascript"
-                  class="skills-photo"
-                />
-                <p class="skill-name">JavaScript</p>
+              <div
+                class="col-12 col-md-6 col-lg-4 col-xl-4 logo-container hidden"
+              >
+                <div class="screen javascript">
+                  <div class="screen-image"></div>
+                  <div class="screen-overlay javascript"></div>
+                  <div class="screen-content">
+                    <img
+                      src="assets/imgs/javascript-logo.webp"
+                      alt="JavaScript Logo"
+                    />
+                    <div class="screen-user">
+                      <span class="name" data-value="JAVASCRIPT"
+                        >JavaScript</span
+                      >
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-                <img
-                  src="assets/imgs/postgresql.webp"
-                  alt="PostgreSQL"
-                  class="skills-photo"
-                />
-                <p class="skill-name">PostgreSQL</p>
+              <div
+                class="col-12 col-md-6 col-lg-4 col-xl-4 logo-container hidden"
+              >
+                <div class="screen postgresql">
+                  <div class="screen-image"></div>
+                  <div class="screen-overlay postgresql"></div>
+                  <div class="screen-content">
+                    <img
+                      src="assets/imgs/postgresql-logo.png"
+                      alt="PostgreSQL Logo"
+                    />
+                    <div class="screen-user">
+                      <span class="name" data-value="POSTGRESQL"
+                        >PostgreSQL</span
+                      >
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-                <img
-                  src="assets/imgs/r-logo.webp"
-                  alt="R"
-                  class="skills-photo"
-                />
-                <p class="skill-name">R</p>
+              <div
+                class="col-12 col-md-6 col-lg-4 col-xl-4 logo-container hidden"
+              >
+                <div class="screen r">
+                  <div class="screen-image"></div>
+                  <div class="screen-overlay r"></div>
+                  <div class="screen-content">
+                    <img src="assets/imgs/r-logo.webp" alt="R Logo" />
+                    <div class="screen-user">
+                      <span class="name" data-value="R">R</span>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-                <img
-                  src="assets/imgs/git-logo2.webp"
-                  alt="Git"
-                  class="skills-photo"
-                />
-                <p class="skill-name">Git</p>
+              <div
+                class="col-12 col-md-6 col-lg-4 col-xl-4 logo-container hidden"
+              >
+                <div class="screen git">
+                  <div class="screen-image"></div>
+                  <div class="screen-overlay git"></div>
+                  <div class="screen-content">
+                    <img src="assets/imgs/git-logo2.webp" alt="Git Logo" />
+                    <div class="screen-user">
+                      <span class="name" data-value="GIT">Git</span>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col-6 col-lg-4 col-xl-4 text-center logo hidden">
-                <img
-                  src="assets/imgs/excel.webp"
-                  alt="Microsoft Excel"
-                  class="skills-photo"
-                />
-                <p class="skill-name">Excel</p>
+              <div
+                class="col-12 col-md-6 col-lg-4 col-xl-4 logo-container hidden"
+              >
+                <div class="screen excel">
+                  <div class="screen-image"></div>
+                  <div class="screen-overlay excel"></div>
+                  <div class="screen-content">
+                    <img
+                      src="assets/imgs/excel.webp"
+                      alt="Microsoft Excel Logo"
+                    />
+                    <div class="screen-user">
+                      <span class="name" data-value="EXCEL">Excel</span>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <!-- <div class="col-6 col-lg-4 col-xl-4  text-center logo hidden">
-      <img src="assets/imgs/microsoft-office.webp" alt="Microsoft-Office" class="skills-photo">
-      <p class="skill-name">Microsoft Office</p>
-    </div> -->
             </div>
           </div>
         </div>
@@ -322,5 +392,6 @@
     </footer>
     <script src="assets/JS/donut.js"></script>
     <script src="assets/JS/aos.js"></script>
+    <script src="assets/JS/text.js"></script>
   </body>
 </html>
