Add meta descriptions and Change titles.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leo Craig Online Portfolio</title>
+    <title>Leo Craig Online Resume</title>
+    <meta
+      name="description"
+      content="Leo Craig is a freelance full stack web developer and incoming associate forensic data scientist at EY. Leo graduated the University of Manchester with First Class Honours in Economics."
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" type="image/x-icon" href="/assets/imgs/ZPtMIaL4.ico" />
