--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume - Leo Craig Online Portfolio</title>
+    <title>Resume - Leo Craig Online Resume</title>
+    <meta
+      name="description"
+      content="Check out Leo Craig's resume, where he outlines his education, experience, and skill set."
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gassets.com" crossorigin />
     <link rel="icon" type="image/x-icon" href="/assets/imgs/ZPtMIaL4.ico" />
@@ -14,10 +17,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@700&family=Montserrat:wght@100;400;900&family=Roboto:wght@100;300;400;700;900&family=Ubuntu&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="icon" type="image/x-icon" href="/assets/imgs/ZPtMIaL4.ico" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/card.css" />
     <style>
