--- a/index.html
+++ b/index.html
@@ -120,15 +120,7 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script>
-      const typed = new Typed(".auto-type", {
-        strings: ["Leo", "an Economics Graduate and Full Stack Developer"],
-        typeSpeed: 50,
-        backSpeed: 25,
-        smartBackspace: true,
-        loop: true,
-      });
-    </script>
+    <script src="/assets/JS/typed.js"></script>
     <script src="assets/JS/particles.js"></script>
     <script src="assets/JS/app.js"></script>
     <script src="assets/JS/aos.js"></script>
